# docx-mcp

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  RENDER_DEPLOYMENT.md  SECURITY.md  docker-compose.yml  pyproject.toml  smithery.yaml  word_mcp_server.py
.github/workflows/: ci.yml
tests/: conftest.py  test_block_replace.py  test_blocks.py  test_challenging_docx.py  test_comments.py  test_content.py  test_content_misc.py  test_document_locking.py  test_document_root.py  test_footnotes.py  test_formatting.py  test_insert_formatting.py  test_lists.py  test_mcp_integration.py  test_media.py  test_paragraph_ops.py  test_paths.py  test_pdf_conversion.py  test_preview.py  test_search_replace_regression.py  test_search_replace_stress.py  test_table_ops.py
tests/fixtures/: verify_test.docx
word_document_server/: __init__.py  asgi.py  document.py  paths.py  server.py
word_document_server/operations/: blocks.py  comments.py  content.py  footnotes.py  formatting.py  helpers.py  media.py  numbering.py  pdf.py  preview.py  protection.py
word_document_server/tools/: extended_document_tools.py
word_document_server/utils/: document_utils.py  file_utils.py
workspace/: lettre_mise_en_demeure.docx  lettre_vaud.docx  lettre_vaud_v2.docx  mise_en_demeure_2026.docx
workspace/benchmark/: having-images-edit.docx
workspace/realworld/: agentic_e2e_work.docx  agentic_new_work.docx  agentic_round_work.docx  challenge_longform_edit.docx  layout_after.docx  sample1_mcp_edit.docx
